fav icon update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Project</title>
+    <link rel="shortcut icon" href="https://png.pngtree.com/png-clipart/20210701/ourmid/pngtree-book-neon-icon-png-design-png-image_3549871.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon"
         href="https://png.pngtree.com/png-vector/20210623/ourmid/pngtree-blue-gradient-refresh-loading-progress-bar-png-image_3447650.jpg"
