--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 <div class="row">
                                     <div class="col-3 order-1 order-sm-0">
                                         <div class="presents ps-lg-4">
-                                            <img class="w-100" src="/assets/images/img1.png" alt="">
+                                            <img class="w-100" src="./assets/images/img1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="col-9 order-0 order-sm-1">
@@ -271,7 +271,7 @@
                                 <div class="row">
                                     <div class="col-3 order-1 order-sm-0">
                                         <div class="presents ps-lg-4">
-                                            <img class="w-100" src="/assets/images/IMG.6.jpg" alt="">
+                                            <img class="w-100" src="./assets/images/IMG.6.jpg" alt="">
                                         </div>
                                     </div>
                                     <div class="col-9 order-0 order-sm-1">
@@ -293,7 +293,7 @@
                                 <div class="row">
                                     <div class="col-3 order-1 order-sm-0">
                                         <div class="presents ps-lg-4">
-                                            <img class="w-100" src="/assets/images/girl-image.4cef0f73b3900c512313.png"
+                                            <img class="w-100" src="./assets/images/girl-image.4cef0f73b3900c512313.png"
                                                 alt="">
                                         </div>
                                     </div>
@@ -319,7 +319,7 @@
                             <div class="row partents">
                                 <div class="col-3 order-1 order-sm-0">
                                     <div class="presents ps-lg-4">
-                                        <img class="w-100" src="/assets/images/hero-bg (1).jpg" alt="">
+                                        <img class="w-100" src="./assets/images/hero-bg (1).jpg" alt="">
                                     </div>
                                 </div>
                                 <div class="col-9 order-0 order-sm-1">
